初始化 年月 和 得到日期数据

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <div class="calendar">
       <div class="calendar-header">
-        <time>2021 年 11 月</time>
+        <time id="yearMonth"></time>
       </div>
       <div>
         <ol class="calendar-weekdays">
