创建当前月份已实现

--- a/index.html
+++ b/index.html
@@ -31,38 +31,7 @@
         </ol>
       </div>
       <div>
-        <ol class="calendar-days">
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-          <li>29</li>
-        </ol>
+        <ol class="calendar-days"></ol>
       </div>
       <div class="calendar-actions">
         <div class="calendar-actions-left">
