完成时间展示（当前、上月、下月）

--- a/index.html
+++ b/index.html
@@ -15,31 +15,33 @@
     <header class="siteHeader">
       <h1>我的日历</h1>
     </header>
-    <div class="calendar">
-      <div class="calendar-header">
-        <time id="yearMonth"></time>
-      </div>
-      <div>
-        <ol class="calendar-weekdays">
-          <li>一</li>
-          <li>二</li>
-          <li>三</li>
-          <li>四</li>
-          <li>五</li>
-          <li>六</li>
-          <li>七</li>
-        </ol>
-      </div>
-      <div>
-        <ol class="calendar-days"></ol>
-      </div>
-      <div class="calendar-actions">
-        <div class="calendar-actions-left">
-          <button>今天</button>
+    <div class="allPage">
+      <div class="calendar">
+        <div class="calendar-header">
+          <time id="yearMonth"></time>
         </div>
-        <div class="calendar-actions-right">
-          <button>上个月</button>
-          <button>下个月</button>
+        <div>
+          <ol class="calendar-weekdays">
+            <li>一</li>
+            <li>二</li>
+            <li>三</li>
+            <li>四</li>
+            <li>五</li>
+            <li>六</li>
+            <li>七</li>
+          </ol>
+        </div>
+        <div>
+          <ol class="calendar-days"></ol>
+        </div>
+        <div class="calendar-actions">
+          <div class="calendar-actions-left">
+            <button id="currentDay">今天</button>
+          </div>
+          <div class="calendar-actions-right">
+            <button id="preMonth">上个月</button>
+            <button id="nextMonth">下个月</button>
+          </div>
         </div>
       </div>
     </div>
