实现展示日程功能

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
         </div>
       </div>
     </div>
+    <div class="eventsWrapper">
+      <h2>当前的日程</h2>
+      <div class="events" id="events"></div>
+    </div>
+
+    <script>
+      window.date = {
+        "2024-2-10": ["去看电影"],
+        "2024-2-12": ["约会", "喂猫"],
+        "2024-2-11": ["吃饭", "睡觉", "读书"],
+      };
+    </script>
     <script src="main.js"></script>
   </body>
 </html>
